<resources>
    <string name="app_name">GVM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_farmacias">FARMACIAS</string>
    <string name="drawer_medicos">MEDICOS</string>
    <string name="drawer_cerrar_session">CERRAR SESSIÓN</string>

    <string name="app_name_full">GESTIÓN DE VISITA MÉDICA</string>
    <string name="text_buttom_login">Entrar</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_usuario">Usuario</string>
    <string name="text_mes_actual">MES ACTUAL</string>
    <string name="text_3_meses">ULTIMOS 3 MESES</string>
    <string name="text_clientes">CLIENTES</string>
    <string name="text_articulos">ARTICULOS</string>
    <string name="copyright">Todos los Derechos Reservados - Unimark S.A, Copyright © 2018</string>
    <string name="hint_busqueda">BUSQUEDA</string>
    <string name="successful">Su Registro fue satisfactorio.</string>

    <string name="lbl_Hits">Veces: </string>
    <string name="lbl_moneda">C$: </string>
    <string name="lbl_Cnt">Cantidad: </string>
    <string name="title_activity_listas_farmacias_medicos">ListasFarmaciasMedicosActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listas_medicos_farmacias">ListasMedicosFarmaciasActivity</string>
    <string name="title_activity_add_farmacia">Activity Farmacia</string>
    <string name="title_activity_add_medicos">Activity Medicos</string>


    <string name="frm_1">Nombre de la Farmacia</string>
    <string name="frm_2">Nombre de Propietario</string>
    <string name="frm_3">Dirección </string>
    <string name="frm_4">Fecha de aniversario. (Cliente Potenciales)</string>
    <string name="frm_5">Tef. De farmacia</string>
    <string name="frm_6">Celular de la dueña</string>
    <string name="frm_7">Horario de atencion</string>
    <string name="frm_8">Responsable de compra</string>
    <string name="frm_9">Celular de responsable de compra</string>
    <string name="frm_10">Cantidad de dependiente</string>
    <string name="frm_11">Productos existente del laboratorio</string>
    <string name="frm_12">Comentarios de la visita.</string>
    <string name="frm_13">Participa de Programa Puntos</string>
    <string name="frm_14">Entrega beneficios a dependientes</string>
    <string name="frm_15">Permite Impulsadoras</string>
    <string name="frm_16">Potencial mensual de compra C$</string>
    <string name="frm_17">Dias para pago de facturas</string>
    <string name="frm_18">Responsable de Vencidos </string>
    <string name="frm_19">Responsable de Canjes</string>
    <string name="frm_20">Nº de dependientes en mostrador</string>
    <string name="frm_21">Es parte de cadena o cooperativa </string>

    <string name="mdc_1">Nombre y apellidos</string>
    <string name="mdc_2">Fecha de nacimiento</string>
    <string name="mdc_3">Direccion</string>
    <string name="mdc_4">Telf. Clinica</string>
    <string name="mdc_5">Celular</string>
    <string name="mdc_6">Email</string>
    <string name="mdc_7">Que otro lugar mas brinda asistencias medica</string>
    <string name="mdc_8">Deporte que practica.</string>
    <string name="mdc_9">Pasatiempo</string>
    <string name="mdc_10">Sociedad Medica en que participa</string>
    <string name="mdc_11">Año y Universidad de Graduacion</string>
    <string name="mdc_12">Nº Estimado de Paciente Semanal Privado</string>
    <string name="mdc_13">Motivos de consulta mas frecuente</string>
    <string name="mdc_14">Costo de Consulta</string>
    <string name="mdc_15">Propietario de Farmacia</string>
    <string name="mdc_16">Socio de Clinica</string>

    <string name="mdc_17">Marca de: </string>
    <string name="mdc_18">Celular</string>
    <string name="mdc_19">Vehiculo</string>
    <string name="mdc_20">Reloj</string>
    <string name="mdc_21">Tipo de computadora en el consultorio</string>

    <string name="mdc_22">ASISTENTE</string>
    <string name="mdc_23">Nombre</string>
    <string name="mdc_24">Telf. / Extension</string>
    <string name="mdc_25">Celular</string>
    <string name="mdc_26">Email</string>
    <string name="mdc_27">Fecha de Nacimieto</string>
    <string name="mdc_28">Computadora</string>
    <string name="title_activity_detalle_contacto">DetalleContactoActivity</string>


</resources>
