<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guma.desarrollo.gvm.activities.AddMedicosActivity"
    tools:showIn="@layout/activity_add_medicos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_card_cliente_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <EditText
                android:hint="@string/mdc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:hint="@string/mdc_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>

            </LinearLayout></android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                <TextView

                    android:hint="@string/mdc_17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:hint="@string/mdc_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:hint="@string/mdc_19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:hint="@string/mdc_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
                <EditText
                    android:hint="@string/mdc_21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:hint="@string/mdc_22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:hint="@string/mdc_28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="21sp"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
