<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guma.desarrollo.gvm.activities.LoginActivity"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmv_logo"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/logo"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name_full"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.4"
                android:paddingTop="20dp"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/EditTextAzul">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediTextUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_usuario"
                        android:text="F09"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:theme="@style/EditTextAzul"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:text="NR8183"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/RaisedButtonDark"
                    android:padding="20dp"
                    android:text="@string/text_buttom_login"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copyright"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
